# OpenRGB-cppSDK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OpenRGB-cppSDK-debug.pro  OpenRGB-cppSDK.pro  README.md  protocol_description.txt  todo.txt
doc/: Doxyfile  examples.dox  main.md
examples/: ContinuouslyUpdateColors.cpp  ContinuouslyUpdateColors2.cpp  PrintDevices.cpp  SetCPUCoolerToRed.cpp
include/OpenRGB/: Client.hpp  Color.hpp  DeviceInfo.hpp  Exceptions.hpp  SystemErrorType.hpp
include/OpenRGB/private/: Color.hpp  DeviceInfo.hpp  Protocol.hpp  SystemErrorInfo.hpp  SystemErrorInfoFwdDecl.hpp
src/: BufferStream.cpp  BufferStream.hpp  Client.cpp  Color.cpp  Common.hpp  DeviceInfo.cpp  Exceptions.cpp  MiscUtils.cpp  MiscUtils.hpp  Protocol.cpp  Protocol.hpp  ProtocolCommon.cpp  ProtocolCommon.hpp  ProtocolMessages.cpp  ProtocolMessages.hpp  Socket.cpp  Socket.hpp  SystemErrorInfo.cpp  Template.cpp  Template.hpp  Utils.cpp  Utils.hpp
src/test/: main.cpp
tools/orgbcli/: CMakeLists.txt  OpenRGB-cppSDK-CLI.pro  README.md
tools/orgbcli/src/: CommandRegistration.cpp  CommandRegistration.hpp  Commands.cpp  Commands.hpp  main.cpp
